SAPP-257: B2C PLP Clear Filter button alignment corrected for responsive

--- a/core-customize/hybris/bin/custom/gallagherb2c/gallagherb2cstorefront/web/webroot/WEB-INF/_ui-src/responsive/themes/amB2C/scss/_product-list.scss
+++ b/core-customize/hybris/bin/custom/gallagherb2c/gallagherb2cstorefront/web/webroot/WEB-INF/_ui-src/responsive/themes/amB2C/scss/_product-list.scss
@@ -534,6 +534,7 @@
     }
     .sidebar-filter-section {
       min-height: inherit;
+      align-content: flex-start;
 
       .cross-icon-out {
         width: 100%;
